Bug 443600 - The popup-palette created by samsung spen air command won't disappear
Summary: The popup-palette created by samsung spen air command won't disappear
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: General (other bugs)
Version First Reported In: 5.0.0-beta2
Platform: Android Android 11.x
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-10-11 15:33 UTC by Eightails
Modified: 2021-10-21 17:00 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Eightails 2021-10-11 15:33:07 UTC
SUMMARY

The popup-palette created by samsung spen "air command" won't disappear with normal procedures like click on the screen.
However, the popup-palette created by normal keyboard shortcut works correctly.
Actually, the bug has existed since 5.0 beta1 but can be solved by doing the "air command" again. This solution doesn't work in beta2, though.

STEPS TO REPRODUCE
1. lanuch krita5.0 beta2 on Samsung Series 7 Tablet and create a new document
2. Use the samsung spen air command "single cilck" to create a popup-palette


OBSERVED RESULT
the popup-palette won't disappear unless creating another popup-palette by keyboard shortcut inestead

EXPECTED RESULT
the popup-palette works correctly like windows version (when you click on the screen,it will disappear)

SOFTWARE/OS VERSIONS
Android11 / samsung one ui3.1

ADDITIONAL INFORMATION
Comment 1 sh_zam 2021-10-18 10:51:20 UTC
Git commit e7c83f23c8e2a1ee6ab5787e957e16833b7705e4 by Sharaf Zaman.
Committed on 18/10/2021 at 10:42.
Pushed by szaman into branch 'master'.

Bugfix: Popup palette won't disappear when using Samsung Air Actions

This should possibly fix the bug.

M  +5    -1    plugins/extensions/spensettings/SPenSettings.cpp

https://invent.kde.org/graphics/krita/commit/e7c83f23c8e2a1ee6ab5787e957e16833b7705e4
Comment 2 sh_zam 2021-10-18 10:57:44 UTC
Hello!

I think I've fixed the issue, because I don't have the device to check this, I'm not 100% sure if this fixed the issue or not. Feel free to reopen the bug.
Comment 3 Eightails 2021-10-19 21:09:33 UTC
(In reply to sh_zam from comment #2)
> Hello!
> 
> I think I've fixed the issue, because I don't have the device to check this,
> I'm not 100% sure if this fixed the issue or not. Feel free to reopen the
> bug.

Thank you for your reply and bugfix works!
The change to code seems to be logical and I believe that can fix the issue correctly.
However, the Krita_nightly_android_Build seems to fail these days, so maybe there is no way to confirm the fix now, I will try it out once I can get the apk.
Thank you again for your efforts!
(I am not a native English speaker. Please forgive me for my poor grammar, but I am really thankful for your help.)
Comment 4 sh_zam 2021-10-21 10:41:45 UTC
Hi!

The Krita Nightly builds are back to stable again, I'd appreciate if you
could confirm if this fixes the issue :)

If you want them to be signed, I can do that for you.
Comment 5 sh_zam 2021-10-21 11:39:51 UTC
Git commit e3b4d65461f7beb760ee0b94a7c495f391a8cd40 by Sharaf Zaman.
Committed on 21/10/2021 at 11:38.
Pushed by szaman into branch 'krita/5.0'.

Bugfix: Popup palette won't disappear when using Samsung Air Actions

This should possibly fix the bug.
(cherry picked from commit e7c83f23c8e2a1ee6ab5787e957e16833b7705e4)

M  +5    -1    plugins/extensions/spensettings/SPenSettings.cpp

https://invent.kde.org/graphics/krita/commit/e3b4d65461f7beb760ee0b94a7c495f391a8cd40
Comment 6 Eightails 2021-10-21 17:00:29 UTC
(In reply to sh_zam from comment #4)
> Hi!
> 
> The Krita Nightly builds are back to stable again, I'd appreciate if you
> could confirm if this fixes the issue :)
> 
> If you want them to be signed, I can do that for you.

Hello!

I managed to sign the apk with a debug sign and finally installed it on my device.
The bug is now well fixed.
Thank you!
(But I found something, maybe not a bug, but really confused me for a while.
That is, when I tried to install the new version without uninstalling the beta2 ver, my device just didn't allow the installation.
Then I realized that there is something wrong with the actual version number.
The version number of beta2 is 5050001 while the one of prealpha 5.1.0 ver is 505000, so the system thought that i was trying to overwrite a new version with a old one, which caused the failure.
I solved this by simply uninstalling the beta2.)