Bugfix: Popup palette won't disappear when using Samsung Air Actions

This should possibly fix the bug.

BUG:443600
(cherry picked from commit e7c83f23c8e2a1ee6ab5787e957e16833b7705e4)